--- a/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
+++ b/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
@@ -30,12 +30,12 @@
                         	<div class="d-flex justify-content-between align-items-center mb-4">
                         		<div class="search-container d-flex flex-fill gap-4">
                         			<div class="d-flex align-items-center gap-2">
-                            			<label for="orderStatus" class="orderStatus">진행상태</label>
-                                		<select id="orderStatus" class="form-select" aria-label="전체">
+                            			<label for="purchaseStatus" class="purchaseStatus">진행상태</label>
+                                		<select id="purchaseStatus" class="form-select" aria-label="전체">
                                    			<option value="ALL">전체</option>
-                                    		<option value="RECEIVED">신청</option>
-                                    		<option value="PREPARING">입고 대기</option>
-                                    		<option value="DELIVERED">입고 완료</option>
+                                    		<option value="REQUEST">신청</option>
+                                    		<option value="WAITING">입고대기</option>
+                                    		<option value="COMPLETION">입고완료</option>
                                     		<option value="CANCELED">취소</option>
                                 		</select>
                                 	</div>
@@ -51,13 +51,13 @@
                             </div>
                             
                         	<hr>
-                            <label for="cliSearch" class="cliSearch">발주 목록</label>
+                            <label for="purchaseSearch" class="purchaseSearch">발주 목록</label>
                             
-                            <div id="orderGrid"></div>
+                            <div id="purchaseGrid"></div>
                             
                             <div class="mt-4">
     							<label class="cliSearch">발주 상세 목록</label>
-    							<div id="orderDetailGrid"></div>
+    							<div id="purchaseDetailGrid"></div>
 							</div>
                         </div>
                     </div>
@@ -66,23 +66,23 @@
         </div>
     </div>
 
-	<div class="modal fade" id="orderAddModal" tabindex="-1" aria-labelledby="orderAddModalLabel" aria-hidden="true">
+	<div class="modal fade" id="purchaseAddModal" tabindex="-1" aria-labelledby="purchaseAddModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-xl modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="orderModalTitle">발주 등록</h5>
+					<h5 class="modal-title" id="purchaseModalTitle">발주 등록</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<form id="orderAddForm">
+					<form id="purchaseAddForm">
 						<div class="row mb-4">
 							<div class="col-md-6 d-flex align-items-center">
 								<label for="clientId" class="form-label me-2 mb-0" style="white-space: nowrap;">거래처명</label>
 								<select id="clientId" class="form-select" required></select>
 							</div>
 							<div class="col-md-6 d-flex align-items-center">
-								<label for="deliveryDate" class="form-label me-2 mb-0" style="white-space: nowrap;">입고일</label>
-								<input type="date" class="form-control" id="deliveryDate" required>
+								<label for="inputDate" class="form-label me-2 mb-0" style="white-space: nowrap;">입고일</label>
+								<input type="date" class="form-control" id="inputDate" required>
 							</div>
 						</div>
 
@@ -93,11 +93,11 @@
 								<div class="d-flex justify-content-between align-items-center mb-2">
 									<h5>자재 리스트</h5>
 									<div class="input-group input-group-sm w-50">
-										<input type="text" id="productSearch" class="form-control" placeholder="품목명 검색">
-										<button class="btn btn-outline-secondary" type="button" id="searchProductBtn">검색</button>
+										<input type="text" id="materialSearch" class="form-control" placeholder="품목명 검색">
+										<button class="btn btn-outline-secondary" type="button" id="searchmaterialBtn">검색</button>
 									</div>
 								</div>
-								<div id="productListGrid" ></div>
+								<div id="materialListGrid" ></div>
 							</div>
 
 							<div class="col-md-6">
@@ -115,7 +115,7 @@
 
 						<div class="modal-footer d-flex justify-content-end">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-							<button type="submit" class="btn btn-success" id="orderSubmitBtn">등록</button>
+							<button type="submit" class="btn btn-success" id="purchaseSubmitBtn">등록</button>
 						</div>
 					</form>
 				</div>
