라우팅 도중

--- a/erp_mes/src/main/resources/templates/plant/process.html
+++ b/erp_mes/src/main/resources/templates/plant/process.html
@@ -55,8 +55,8 @@
             { header: '공정번호', name: 'proId' },	
             { header: '공정명', name: 'proNm' },	
             { header: '공정 유형', name: 'typeNm' },
-            { header: '공정 설명', name: 'note' },
-//             { header: '공정 시간', name: 'proTime' },
+            { header: '공정 설명', name: 'note',whiteSpace: 'normal' },
+            { header: '검사 유형', name: 'inspecNm' },
 //             { header: '공정 유무', name: 'equipId' },
           ],
         });
