--- a/erp_mes/src/main/resources/templates/plant/process_route.html
+++ b/erp_mes/src/main/resources/templates/plant/process_route.html
@@ -18,6 +18,12 @@
     <div class="container-fluid">
     	
 <!--     	<button id="prs-add" class="btn btn-primary btn-sm" onclick="addProcess()" style="float:right;">추가</button> -->
+		<div class="d-flex align-items-center gap-2">
+  			<label for="orderStatus" class="orderStatus">진행상태</label>
+      		<select id="orderStatus" class="form-select" aria-label="전체">
+          	
+      		</select>
+        </div>
     	<button id="prs-add" class="btn btn-primary btn-sm" onclick="addRoute()" style="float:right;">추가</button>
 		<div id="grid" style="width: 100%; height: 300px;"></div>
 	
@@ -52,11 +58,11 @@
           scrollX: true,
           scrollY: true,
           columns: [
-            { header: '라우트번호', name: 'routeId' },	
+            { header: '라우트 번호', name: 'routeId' },	
             { header: '제품 이름', name: 'productNm' },	
             { header: '공정 이름', name: 'proNm' },
             { header: '필요 설비', name: 'equipNm' },
-            { header: '설명', name: 'note' },
+            { header: '설명', name: 'note' }
           ],
         });
         fetch('/plant/routeGrid', {
