--- a/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
+++ b/erp_mes/src/main/resources/static/bootstrap/css/pop/workResult.css
@@ -31,7 +31,7 @@
     height: 350px;
 }
 
-/* 작업지시 테이블 */
+/*  ======================작업지시 테이블 ================================ */
 #work-orders table {
   	border-collapse: separate;
   	border-spacing: 0 10px; /* 위아래 8px 간격 */
@@ -56,6 +56,18 @@
   	box-shadow: 0 4px 8px rgba(0,0,0,0.12); /* 그림자 강조 */
 }
 
+.status-progress {
+    color: #ff4d4f !important;          /* 빨간색 */
+    font-weight: bold;
+}
+
+.status-pending {
+    color: #1890ff !important;       /* 파란색 */
+    font-weight: bold;
+}
+
+
+
 /* 작업현황 영역 높이 */
 .work-status {
     height: 400px;
@@ -77,19 +89,6 @@
 #popModal .modal-dialog {
     max-width: 1000px;   /* 원하는 최대 너비 */
     width: 95%;           /* 화면 대비 비율 */
-}
-
-/* 재고요청 */
-#shortageList thead th {
-	background: #ffc107ba;
-    color: #343a40;
-}
-
-#shortageList tbody tr {
-	border: 1px solid #dee2e6;   /* 테두리 선 추가 */
-	box-shadow: 0 2px 4px rgba(0,0,0,0.08);
-	border-radius: 8px;
-  	transition: all 0.2s ease; /* 부드러운 이동/색 변화 */
 }
 
 
@@ -121,57 +120,7 @@
 
 
 
-#shortageList {
-	display: none; /* 처음에는 숨김 */
-    height: 200px;
-    align-items: baseline;
-    gap: 30px;
-    justify-content: space-between;
-}
 
-#shortnumPad {
-	border-radius: 10px;
-    padding: 10px;
-    background: #e3e1e1;
-    width: 175px;
-    height: 180px;
-    margin-bottom: 20px
-}
-
-.Snum-btn, #deleteBtn, #okBtn {
-	background: #fff;
-  	border-radius: 8px;
-  	font-size: 20px;
-  	cursor: pointer;
-  	transition: all 0.2s;
-  	width: 45px;
-  	height: 35px;
-  	border: none;
-}
-
-.Snum-btn:hover, #deleteBtn:hover, #okBtn:hover {
-	background: #007bff;
-	color: #fff;
-	transform: translateY(-2px);
-	box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-}
-
-.Snum-btn:active, #deleteBtn:active, #okBtn:active {
-	transform: translateY(1px);
-	box-shadow: none;
-}
-
-.shortQty-input {
-    border: 1px solid #ccc;
-    outline: none;
-    transition: all 0.2s;
-}
-
-/* 저장됨 느낌 클래스 */
-.shortQty-input.saved {
-    border-color: transparent;      /* 테두리 사라짐 */
-    color: #333;
-}
 
 /* 수정 모달 */
 #numPad {
@@ -183,7 +132,7 @@
     margin-bottom: 20px; 
 }
 
-.num-btn {
+.num-btn, #D-deleteBtn, #D-okBtn {
 	background: #fff;
   	border-radius: 8px;
   	font-size: 20px;
@@ -194,14 +143,14 @@
   	border: none;
 }
 
-.num-btn:hover {
+.num-btn:hover, #D-deleteBtn:hover, #D-okBtn:hover {
 	background: #007bff;
 	color: #fff;
 	transform: translateY(-2px);
 	box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
-.num-btn:active {
+.num-btn:active, #D-deleteBtn:active, #D-okBtn:active {
 	transform: translateY(1px);
 	box-shadow: none;
 }
