--- a/erp_mes/src/main/resources/templates/pop/work_result.html
+++ b/erp_mes/src/main/resources/templates/pop/work_result.html
@@ -17,7 +17,7 @@
 	        작업자 : <span></span>
 	    </div>
 	    <div class="d-inline-flex align-items-center">
-			<button type="button" class="btn btn-warning d-flex align-items-center">
+			<button id="btnEndWork" type="button" class="btn btn-warning d-flex align-items-center">
 		        <i class="fa-solid fa-power-off fa-fw me-1"></i>
 		        <span>작업종료</span>
 			</button>
@@ -32,9 +32,11 @@
                 		<thead>
                 			<tr>
 								<th>작업지시ID</th>
-							    <th>공정명</th> <!-- 나중에 공정명으로 바꾸기 -->
+							    <th>제품명</th>
+							    <th>공정명</th>
 							    <th>작업시작일</th>
-							    <th>작업종료일</th>
+							    <th>작업종료일</th>							    
+							    <th>작업상태</th>							    
                 			</tr>
                 		</thead>
                 		<tbody id="workOrderBody"></tbody>
@@ -46,6 +48,7 @@
             <div class="box dashboard">
                 <svg id="quantityChart"></svg>
 	    		<svg id="progressChart"></svg>
+	    		<svg id="equipmentChart" width="500" height="300"></svg>
 			</div>
 		</div>
     </div>
@@ -71,31 +74,9 @@
 			</div>
 			<div class="modal-body">
 				<div id="bomInfo" style="width:100%; height:200px; margin-bottom: 3%;">
-					<h5>BOM</h5>
 					<div id="Workgrid1"></div>
 				</div>
 
-				<div id="shortageList" style="font-size: 14px">
-					<table class="table table-bordered text-center" id="shortageTable" style="width: 50%; table-layout: fixed;">
-			            <thead>
-			                <tr>
-			                    <th>자재명</th>
-			                    <th>부족수량</th>
-			                </tr>
-			            </thead>
-			            <tbody id="shortageBody"></tbody>
-			        </table>
-					<div id="shortnumPad">
-						<div style="display:grid; grid-template-columns: repeat(3, 50px); gap:5px;">
-					        <button class="Snum-btn">1</button><button class="Snum-btn">2</button><button class="Snum-btn">3</button>
-					        <button class="Snum-btn">4</button><button class="Snum-btn">5</button><button class="Snum-btn">6</button>
-					        <button class="Snum-btn">7</button><button class="Snum-btn">8</button><button class="Snum-btn">9</button>
-					        <button id="deleteBtn" type="button">Del</button>
-					        <button class="Snum-btn">0</button>
-					        <button id="okBtn" type="button">OK</button>
-					    </div>
-					</div>
-				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">닫기</button>
 					<button id="workOrderCheck" type="submit" class="btn btn-success btn-sm">확인</button>
@@ -117,17 +98,23 @@
 					<div id="goodQtyTable">
 		                <div class="qty-inputs">
 		                    <div>
-		                        <label for="goodQty1">생산수량</label>
-		                        <input type="text" id="goodQty1">
+		                        <label for="goodQtyInput">생산수량</label>
+		                        <input class="num-input" type="text" id="goodQtyInput">
 		                    </div>
 		                    <div style="margin-top: 20px;">
-		                        <label for="defectQty1">불량수량</label>
-		                        <input type="text" id="defectQty1">
+		                        <label for="defectQtyInput">불량수량</label>
+		                        <input class="num-input" type="text" id="defectQtyInput">
 		                    </div>
 		                    <div style="margin-top: 20px;">
-		                        <label for="defectQty1">불량사유</label>
-		                        <input type="text" id="defectQty1">
-		                    </div>
+						    <label for="defectReasonBtn">불량사유</label>
+						    	 <input type="text" id="defectReasonInput" class="reason-input">
+							    <button type="button" id="defectReasonBtn" class="btn btn-outline-primary">
+							        불량사유 선택
+							    </button>
+							    
+							    <div id="defectReasonOptions" style="margin-top: 10px; display: none;"></div>
+							    
+							</div>
 		                </div>
 					</div>
 					<div id="defectList">
@@ -136,14 +123,16 @@
 						        <button class="num-btn">1</button><button class="num-btn">2</button><button class="num-btn">3</button>
 						        <button class="num-btn">4</button><button class="num-btn">5</button><button class="num-btn">6</button>
 						        <button class="num-btn">7</button><button class="num-btn">8</button><button class="num-btn">9</button>
-						        <button class="num-btn">Del</button><button class="num-btn">0</button><button class="num-btn">OK</button>
+						        <button id="D-deleteBtn">Del</button>
+						        <button class="num-btn">0</button>
+						        <button id="D-okBtn">OK</button>
 						    </div>
 						</div>
 					</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">닫기</button>
-					<button type="submit" class="btn btn-success btn-sm">확인</button>
+					<button id="workUpdateSaveBtn" type="button" class="btn btn-success btn-sm">확인</button>
 				</div>	
 			</div>
 		</div>
@@ -156,10 +145,22 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://uicdn.toast.com/grid/latest/tui-grid.min.js"></script>
 	<script src="https://kit.fontawesome.com/60c9dd1eea.js" crossorigin="anonymous"></script>
-	<script src="https://d3js.org/d3.v3.min.js"></script>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
 	<script src="/bootstrap/js/pop/workOrderCheck.js"></script>
 	<script src="/bootstrap/js/pop/workResultList.js"></script>
 	<script src="/bootstrap/js/pop/workResultDash.js"></script>
+	<script>
+	$(document).ready(function() {
+		$("#btnEndWork").on("click", function() {
+			if (confirm("작업을 종료하시겠습니까?")) {
+				window.location.href = "/main"; // 확인 버튼 클릭 시 메인 화면 이동
+		    }
+		});
+	});
+</script>
+	
 </th:block>
+
+
 </body>
 </html>
